# BlockyEngine

./: .gdbinit  .gitignore  CMakeLists.txt  PlayAudioFile.cpp  PlayAudioFile.hpp  README.md  main.cpp  playAudioWavFile.cpp  playAudioWavFile.hpp  renderer.cpp  transform_printer.py
Component/: Component.h  Component.hpp  Transform.cpp  (+12 more)
engine/: BlockyEngine.cpp  BlockyEngine.hpp  CMakeLists.txt  Logging.cpp  Logging.hpp  TestClass.cpp  TestClass.hpp  testMain.cpp
engine/Testing/: BLoggerTest.cpp
engine/cmake/: build_deps.cmake  fetch_lib.cmake
engine/components/: CMakeLists.txt  Component.cpp  Component.hpp  ComponentTransform.cpp  ComponentTransform.hpp  Move.cpp  Move.hpp  MovementComponent.cpp  MovementComponent.hpp  Renderable.cpp  Renderable.hpp
engine/components/PhysicsBody/: CMakeLists.txt  ColliderBody.cpp  ColliderBody.hpp  PhysicsBody.hpp  RigidBody.hpp
engine/components/animation/: Animation.cpp  Animation.hpp  AnimationController.cpp  AnimationController.hpp  Animator.cpp  Animator.hpp  CMakeLists.txt
engine/components/audio/: Audio.cpp  Audio.hpp  CMakeLists.txt
engine/components/collider/: BoxCollider.cpp  BoxCollider.hpp  CMakeLists.txt  CircleCollider.cpp  CircleCollider.hpp  Collider.cpp  Collider.hpp  RectangleCollider.cpp  RectangleCollider.hpp
engine/components/custom/: KeyboardInputComponent.cpp  MouseInputComponent.cpp
engine/components/example/: CMakeLists.txt  InstantiatePhysicsObject.cpp  InstantiatePhysicsObject.h  KeyboardInputComponent.cpp  KeyboardInputComponent.hpp  MouseCameraController.cpp  MouseInputComponent.cpp  MouseInputComponent.hpp  MouseReparenting.cpp  MouseReparenting.hpp  MoveWithPhysics.cpp  MoveWithPhysics.hpp  MovementComp.cpp  MovementComp.hpp  NetworkingComponent.cpp  NetworkingComponent.hpp  RotationComp.cpp  RotationComp.hpp  SceneSwitchComp.cpp  SceneSwitchComp.hpp  SpawnerComp.cpp  SpawnerComp.hpp
engine/components/example/inputScripts/: KeyboardInputComponent.hpp  MouseCameraController.cpp  MouseCameraController.hpp  MouseInputComponent.cpp  MouseInputComponent.hpp  MouseReparenting.cpp
engine/components/gui/: CMakeLists.txt  UIComponent.cpp  UIComponent.hpp
engine/components/json/: CMakeLists.txt  JsonLoader.cpp  JsonLoader.hpp  JsonSaveAndLoader.cpp  JsonSaveAndLoader.hpp
engine/components/pathfinding/: CMakeLists.txt  GridNavigator.cpp  GridNavigator.hpp  GridNode.cpp  GridNode.hpp  MouseTargetedNavigation.cpp  MouseTargetedNavigation.hpp  PathfindingGrid.cpp  PathfindingGrid.hpp
engine/components/physics/: CMakeLists.txt  PhysicsBody.cpp  PhysicsBody.hpp
engine/components/physics/collider/: BoxCollider.cpp  BoxCollider.hpp  CMakeLists.txt  CircleCollider.cpp  CircleCollider.hpp  ColliderBody.cpp  ColliderBody.hpp
engine/components/physics/collision/: CMakeLists.txt  CollisionHandler.cpp  CollisionHandler.hpp
engine/components/physics/physicsBody/: ColliderBody.hpp  PhysicsBody.cpp  PhysicsBody.hpp
engine/components/physics/physicsShape/: Box.cpp  Box.hpp  Circle.cpp  Circle.hpp  PhysicsShape.cpp  PhysicsShape.hpp
engine/components/physics/rigidBody/: BoxRigidBody.cpp  BoxRigidBody.hpp  CMakeLists.txt  CircleRigidBody.cpp  CircleRigidBody.hpp  RigidBody.cpp  RigidBody.hpp
engine/components/physics/shape/: Box.cpp  Box.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  PhysicsShape.cpp  PhysicsShape.hpp  Shape.cpp  Shape.hpp
engine/components/physics/type/: Type.cpp  Type.hpp
engine/components/physicsShape/: Circle.hpp  PhysicsShape.cpp  PhysicsShape.hpp
engine/components/renderables/: AnimationRenderable.cpp  AnimationRenderable.hpp  CMakeLists.txt  EllipseRenderable.cpp  EllipseRenderable.hpp  RectangleRenderable.cpp  RectangleRenderable.hpp  Renderable.cpp  Renderable.hpp  RenderableType.hpp  SpriteRenderable.cpp  SpriteRenderable.hpp  TextRenderable.cpp  TextRenderable.hpp
engine/components/rigidbody/: RigidBody.cpp  RigidBody.hpp
engine/gameObject/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  GameObjectTransform.cpp  GameObjectTransform.hpp  Transform.cpp  Transform.hpp
engine/logging/: BLogger.cpp  BLogger.hpp  CMakeLists.txt
engine/moduleManager/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.hpp  ModuleWrapper.hpp
engine/moduleManager/modules/: CMakeLists.txt  WindowModule.cpp  WindowModule.hpp
engine/moduleManager/modules/audio/: AudioModule.cpp  AudioModule.hpp  CMakeLists.txt
engine/moduleManager/modules/input/: CMakeLists.txt  InputModule.cpp  InputModule.hpp  KeyEvent.hpp  KeyInput.cpp  KeyInput.hpp  MouseEvent.hpp  MouseInput.cpp  MouseInput.hpp
engine/moduleManager/modules/networking/: CMakeLists.txt  NetworkMessage.cpp  NetworkMessage.hpp  NetworkState.cpp  NetworkState.hpp  NetworkingModule.cpp  NetworkingModule.hpp
engine/moduleManager/modules/pathfinding/: CMakeLists.txt  GridGraph.cpp  GridGraph.hpp  GridNode.cpp  GridNode.hpp  PathfindingGrid.cpp  PathfindingGrid.hpp  PathfindingModule.cpp  PathfindingModule.hpp
engine/moduleManager/modules/physics/: CMakeLists.txt  MyContactListener.cpp  MyContactListener.hpp  PhysicsModule.cpp  PhysicsModule.hpp
engine/moduleManager/modules/rendering/: CMakeLists.txt  Camera.hpp  ImGUIRenderingModule.cpp  ImGUIRenderingModule.hpp  ImGuiRenderingModule.cpp  ImGuiRenderingModule.hpp  RenderingModule.cpp  RenderingModule.hpp
engine/modules/: CMakeLists.txt  WindowModule.cpp  WindowModule.hpp
engine/modules/core/: CMakeLists.txt  ModuleManager.cpp  ModuleManager.hpp  ModuleWrapper.cpp
engine/sceneManager/: CMakeLists.txt  SceneManager.cpp  SceneManager.hpp
engine/sceneManager/components/: CMakeLists.txt  Component.cpp  Component.hpp  ComponentTransform.hpp  Renderable.hpp
engine/sceneManager/gameObject/: GameObject.cpp  GameObject.hpp
engine/testing/: BLoggerTest.cpp  BLogger_Fixture.cpp  BLogger_Fixture.hpp  CMakeLists.txt  TestLogger.hpp  TestTest.cpp  TestTest.hpp  testMain.cpp
engine/testing/tests/: BLoggerTest.cpp  BLoggerTest.hpp  BLogger_Fixture.cpp  BLogger_Fixture.hpp  TestTest.cpp  TestTest.hpp
engine/utilities/: CMakeLists.txt  JsonUtil.cpp  JsonUtil.hpp  TimeUtil.cpp  TimeUtil.hpp
(+61 files in other folders)
